# cs481_hw2

./: CMakeLists.txt  faults.cpp  faults.hpp  frame_list.hpp  page_table.hpp  replacement.cpp  replacement.hpp  tlb.hpp  virtual_to_physical.cpp  virtual_to_physical.hpp
tests/: CMakeLists.txt  test_addr.cpp  test_clock_lru.cpp  test_fifo.cpp  test_fifo_steps.cpp  test_lru.cpp  test_lru_steps.cpp  test_offset.cpp  test_pfn.cpp  test_table.cpp  test_table_page.cpp  test_table_pfn.cpp  test_table_protect.cpp  test_table_seg.cpp  test_table_to_tlb.cpp  test_tlb.cpp  test_tlb_index.cpp  test_tlb_miss.cpp  test_tlb_pfn.cpp  test_tlb_protection.cpp  test_tlb_tag.cpp  test_virtual_to_physical1.cpp  test_virtual_to_physical2.cpp  test_virtual_to_physical3.cpp  test_virtual_to_physical4.cpp  test_virtual_to_physical5.cpp  test_vpn.cpp
